inicio mobile e hero

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,1 +1,8 @@
 @import 'reset';
+@import 'mixins';
+@import 'variables';
+@import 'components';
+@import 'grid';
+@import 'tipografia';
+@import 'header';
+@import 'hero';
