--- a/styles/scss/_reset.scss
+++ b/styles/scss/_reset.scss
@@ -29,6 +29,8 @@ html{
   }
   
   body {
+    background-color: #F4F4F4;
+  
     /* 4. Add accessible line-height */
     line-height: 1.5;
     /* 5. Improve text rendering */
