--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -20,10 +20,12 @@ $font-family: 'Satoshi', sans-serif;
 
 $h1: 700 7.2rem/110% #{$font-family};
 $text-p: 400 1.6rem/120% #{$font-family};
+$text-p14: 400 1.4rem/120% #{$font-family};
 $text-p18: 400 1.8rem/140% #{$font-family};
 $btn-font-b: 600 1.4rem/120% #{$font-family};
+$card-flutuante-strong: 600 2.4rem/120% #{$font-family};
 
 
 //MOBILE FONTS
-
+$h1-mobile: 700 4.2rem/110% #{$font-family};
 $text-p-mobile: 400 1.6rem/120% #{$font-family};
