--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -30,3 +30,149 @@
     background-color: $brand-primary-green;
     cursor: pointer;
 }
+
+.card-flutuante{
+    position: absolute;
+    z-index: 10;
+    left: 96.1rem;
+    top: 48.1rem;
+    @include flex(row,center,center);
+    width: 100%;
+    max-width: 19.5rem;
+    height: 7.2rem;
+    gap: 1.2rem;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 5px 14.3px 0px rgba(0, 0, 0, 0.25);
+    
+    border-radius: 50px;
+
+    .img-card-flutuante{
+        @include flex(column,center,center);
+        background-color: $brand-primary-green;
+        width: 100%;
+        height: 6rem;
+        max-width: 6rem;
+        border-radius: 50%;
+    }
+
+    .txt-card-flutuante{
+        @include flex(column,flex-start,center);
+        width: 100%;
+        max-width: 9.6rem;
+        strong{
+            font: $card-flutuante-strong;
+            letter-spacing: -.8px;
+        }
+        span{
+            font: $text-p14;
+            color: $gray-paragraf;
+        }
+
+    }
+}
+
+.curso-card{
+    width: 100%;
+    max-width: 38.4rem;
+    display: flex;
+    flex-direction: column;
+    border-radius: 1.6rem;
+    padding: 8px 8px;
+    overflow: hidden;
+    cursor: pointer;
+ 
+    transition: transform 0.3s ease;
+    
+    &:hover{
+        transform: translateY(-1px);
+        // box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .image-card{
+        width: 100%;
+        height: auto;
+        overflow: hidden;
+        border-radius: 1rem;
+        
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
+    }
+
+    .info-card{
+        margin-top: 2.4rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 1.6rem;
+
+        .time-card{
+            display: flex;
+            font-size: 1.4rem;
+            color: #747474;
+    
+            .hora{
+                width: 100%;
+                max-width: 11.8rem;
+                display: flex;
+                align-items: center;
+                gap: 8px;
+    
+                span{
+                    display: flex;
+                }
+                
+            }
+    
+            .tarefas{
+                width: 100%;
+                max-width: 11.8rem;
+                display: flex;
+                align-items: center;
+                gap: 8px;
+    
+                span{
+                    display: flex;
+                }
+            }
+        }
+
+        .titulo{
+            h4{
+                font-size: 2rem;
+                letter-spacing: -0.48px;
+            }
+        }
+
+        .bottom{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            .price{
+                display: flex;
+                font-size: 1.6rem;
+                font-weight: 700;
+                letter-spacing: -0.16px;
+                line-height: 1px;
+            }
+        }
+    }
+
+   
+}
+
+.btn-card{
+    width: 100%;
+    max-width: 12.9rem;
+    border-radius: 5rem;
+    border: none;
+    background-color: #E0E721;
+    padding: .9rem 2.3rem;
+    font-weight: 700;
+    cursor: pointer;
+}
