--- a/styles/scss/_hero.scss
+++ b/styles/scss/_hero.scss
@@ -1,42 +1,115 @@
-.container{
-    @include flex(column,center,center);
-}
-
-.text-hero{
-
-
-    margin-top: 10rem;
-    margin-bottom: 3.2rem;
+.s-hero{
 
 
 
-    h1{
-        text-align: center;
+    .container{
+        @include flex(column,center,center);
+        position: relative;
     }
-
-    p{
-        text-align: center;
-        margin-top: 1.6rem;
+    
+    .text-hero{
+    
+    
+        margin-top: 10rem;
+        margin-bottom: 3.2rem;
+        position: relative;
+    
+    
+    
+        h1{
+            text-align: center;
+        }
+    
+        h1::before{
+            content: "";
+            background-image: url(/assets/svgs/linha-titulo.svg);
+            background-repeat: no-repeat;
+            background-size: contain;
+            position: absolute;
+            transform: translateX(-50%); // centraliza de verdade
+            top: 30%;
+            left: 71%;
+            display: block;
+            width: 100%;
+            max-width: 45.2rem;
+            height: 8rem;
+        }
+    
+        p{
+            text-align: center;
+            margin-top: 1.6rem;
+        }
+    
+    
     }
+    
+    .video-hero{
 
-
-}
-
-.video-hero{
-    display: flex;
-    flex-direction: column;
-    margin-top: 6.4rem;
-    width: 100%;
-    max-width: 86.4rem;
-    height: 35.8rem;
-    background-color: $brand-primary-green;
-    border-radius: 8px;
-}
-    iframe{
+        display: flex;
+        flex-direction: column;
+        margin-top: 6.4rem;
         width: 100%;
         max-width: 86.4rem;
-        border-radius: 8px;
         height: 35.8rem;
-        opacity: .8;
+        background-color: $brand-primary-green;
+        border-radius: 8px;
+    }
+        iframe{
+            width: 100%;
+            max-width: 86.4rem;
+            border-radius: 8px;
+            height: 35.8rem;
+            opacity: .8;
+    
+        }
+    
+
+    @include responsive(900px){
+        .text-hero{
+
+            h1::before{
+                content: "";
+                background-image: url(/assets/svgs/linha-titulo.svg);
+                background-repeat: no-repeat;
+                background-size: contain;
+                position: absolute;
+                transform: translateX(-50%);
+                top: 26%;
+                left: 70%;
+                width: 100%;
+                max-width: 30rem;
+
+
+                
+            }
+        }
+    }
+    
+    @include responsive(420px){
+
+        .text-hero{
+
+            h1::before{
+                content: "";
+                background-image: url(/assets/svgs/linha-titulo.svg);
+                background-repeat: no-repeat;
+                background-size: contain;
+                position: absolute;
+                transform: translateX(-50%);
+                top: 38%;
+                left: 40%;
+                width: 100%;
+                max-width: 26rem;
+
+
+                
+            }
+        }
 
     }
+
+
+}
+
+
+
