--- a/styles/scss/_mixins.scss
+++ b/styles/scss/_mixins.scss
@@ -6,7 +6,7 @@
 }
 
 
-@mixin repsonsive($screenwidth){
+@mixin responsive($screenwidth){
     @media (max-width: $screenwidth){
         @content;
     }
