--- a/styles/scss/_tipografia.scss
+++ b/styles/scss/_tipografia.scss
@@ -1,6 +1,19 @@
 h1{
     font: $h1;
     letter-spacing: -1px;
+    color: $brand-primary-dark;
+}
+
+h2{
+    font: $h2;
+    letter-spacing: -1px;
+    color: $brand-primary-dark;
+}
+
+h3{
+    font: $h3;
+    letter-spacing: -1px;
+    color: $brand-primary-dark;
 }
 
 
