--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -160,19 +160,99 @@
                 letter-spacing: -0.16px;
                 line-height: 1px;
             }
+
+            .btn-card{
+                width: 100%;
+                max-width: 12.9rem;
+                border-radius: 5rem;
+                border: none;
+                background-color: #E0E721;
+                padding: .9rem 2.3rem;
+                font: $btn-font-b;
+                cursor: pointer;
+            }
         }
     }
 
    
 }
 
-.btn-card{
+.card-aprendizado-1{
+    @include flex(column,space-between,center);
+    flex: 1;
     width: 100%;
-    max-width: 12.9rem;
-    border-radius: 5rem;
-    border: none;
-    background-color: #E0E721;
-    padding: .9rem 2.3rem;
-    font-weight: 700;
-    cursor: pointer;
+    max-width: 38.4rem;
+    padding: 2.4rem;
+    gap: 6.5rem;
+    background-color: white;
+    border-radius: 2rem;
+
+
+    .top-info-card{
+        @include flex(row,center, space-between);
+
+        .icon{
+            background-color: $brand-primary-green;
+            padding: 2.4rem;
+            border-radius: 7.2rem;
+        }
+
+    }
+    .bottom-info{
+        p{
+            font: $text-p;
+            margin-top: 1.2rem;
+        }
+        
+    }
+
+}
+
+.card-aprendizado-2{
+    @include flex(column,center,space-between);
+    width: 100%;
+    max-width: 38.4rem;
+    padding: 2.4rem;
+    background-color: white;
+    border-radius: 2rem;
+
+    .img-card{
+        @include flex(row,center,center);
+        background-color: $bg-white-theme;
+        border-radius: 1.6rem;
+        margin-bottom: 6.3rem;
+        width: 100%;
+        max-width: 33.6rem;
+        height: 25.9rem;
+        img{
+            border-radius: 1.6rem;
+        }
+ 
+    }
+
+    .info-card-2{
+        h3{
+            text-align: center;
+            margin-bottom: 1.2rem;
+        }
+
+        p{
+            font: $text-p;
+            text-align: center;
+            letter-spacing: -0.48px;
+            margin-bottom: 2.7rem;
+        }
+    }
+}
+
+.card-green{
+    @include flex(column,flex,space-between);
+    flex: 1;
+    width: 100%;
+    max-width: 38.4rem;
+    height: 30rem;
+    padding: 2.4rem;
+    border-radius: 2rem;
+    background-color: $brand-primary-green;
+
 }
