--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -19,6 +19,8 @@ $font-family: 'Satoshi', sans-serif;
 
 
 $h1: 700 7.2rem/110% #{$font-family};
+$h2: 700 4.8rem/112% #{$font-family};
+$h3: 700 2.4rem/120% #{$font-family};
 $text-p: 400 1.6rem/120% #{$font-family};
 $text-p14: 400 1.4rem/120% #{$font-family};
 $text-p18: 400 1.8rem/140% #{$font-family};
