--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -9,6 +9,7 @@ $bg-white-theme: #F4F4F4;
 
 
 $gray-paragraf: #747474;
+$gray-cd: #CDCDCD;
 
 
 
@@ -21,7 +22,10 @@ $font-family: 'Satoshi', sans-serif;
 $h1: 700 7.2rem/110% #{$font-family};
 $h2: 700 4.8rem/112% #{$font-family};
 $h3: 700 2.4rem/120% #{$font-family};
+$hfaq: 700 2.4rem/132% #{$font-family};
 $text-p: 400 1.6rem/120% #{$font-family};
+$txt-filter: 400 1.4rem/112% #{$font-family};
+$pfaq: 400 1.6rem/150% #{$font-family};
 $text-p14: 400 1.4rem/120% #{$font-family};
 $text-p18: 400 1.8rem/140% #{$font-family};
 $btn-font-b: 600 1.4rem/120% #{$font-family};
