--- a/styles/scss/_faq.scss
+++ b/styles/scss/_faq.scss
@@ -7,8 +7,12 @@
         gap: 6.4rem;
 
         .collapsible{
+            @include flex(column, center, flex-start);
+            gap: 3.2rem;
             width: 100%;
-            max-width: 86.8rem;           
+            max-width: 86.8rem;
+            height: 48.4rem;  
+                    
 
         }
     }
