filtro cursos responsivo

--- a/styles/scss/_tipografia.scss
+++ b/styles/scss/_tipografia.scss
@@ -37,4 +37,12 @@ p{
     p{
         font: $text-p14;
     }
+
+    h2{
+        font: $h2-mobile;
+    }
+
+    h6{
+        font: $btn-font-b;
+    }
 }
