--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -34,4 +34,5 @@ $card-flutuante-strong: 600 2.4rem/120% #{$font-family};
 
 //MOBILE FONTS
 $h1-mobile: 700 4.2rem/110% #{$font-family};
+$h2-mobile: 700 3.2rem/112% #{$font-family};
 $text-p-mobile: 400 1.6rem/120% #{$font-family};
