--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -6,8 +6,16 @@
 @import 'tipografia';
 @import 'header';
 @import 'hero';
+@import 'clientes';
 @import 'cursos';
 @import 'aprendizado';
 @import 'faq';
 @import 'cta';
 @import 'footer';
+@import 'acervo';
+@import 'shero';
+@import 'solutions';
+@import 'empresa';
+@import 'central';
+@import 'acervo-conhecimento';
+@import 'contact';
