--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -7,6 +7,13 @@
     cursor: pointer;
     gap: 1.6rem;
     font: $btn-font-b;
+    color: $brand-primary-dark;
+
+
+    img{
+        filter: none;
+    }
+    
 }
 
 .btn-header-primary{
@@ -264,7 +271,6 @@
     padding: 2.4rem;
     border-radius: 2rem;
     background-color: $brand-primary-green;
-
 }
 
 .item-faq{
@@ -322,4 +328,100 @@
 
 
 
+}
+
+.acervo-card{
+    width: 100%;
+    max-width: 38.4rem;
+    padding: .8rem;
+
+    .infos-acervo-card{
+        @include flex(column, flex-start,center);
+
+        margin-top: 2.4rem;
+        margin-bottom: 3.2rem;
+        gap: 1.6rem;
+    }
+
+    .btn-primary{
+        width: 100%;
+        display: block;
+    }
+
+}
+
+.central-card{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 3.2rem;
+    width: 100%;
+    height: 28.8rem;
+    max-width: 38.4rem;
+
+    border: 1px solid rgba(0, 0, 0, 0.158);
+    padding: 1.6rem;
+    border-radius: .8rem;
+
+    .top-main{
+        @include flex(column, flex-start, space-between);
+        gap: 2.4rem;
+
+
+        
+    .top-central{
+        @include flex(row, center, space-between);
+
+        width: 100%;
+
+        .txts-central{
+
+            h4{
+                font-weight: 700;
+            }
+
+            strong{
+                font-size: 1.6rem;
+            }
+        }
+
+    }
+
+    .text-card-central{
+
+        p{
+            font: $text-p;
+        }
+
+    }
+
+
+    }
+
+    .bottom-central{
+        @include flex(row, center, space-between);
+
+        .certify{
+            @include flex(row, center, flex-start);
+            gap: .9rem;
+
+            h6{
+                color: $brand-primary-dark;
+            }
+        }
+
+
+        .btn-centra-card{
+            width: 100%;
+            max-width: 12.9rem;
+            border-radius: 5rem;
+            border: none;
+            background-color: #E0E721;
+            padding: .9rem 2.3rem;
+            font: $btn-font-b;
+            cursor: pointer;
+
+        }
+    }
 }
