--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -22,6 +22,7 @@ $font-family: 'Satoshi', sans-serif;
 $h1: 700 7.2rem/110% #{$font-family};
 $h2: 700 4.8rem/112% #{$font-family};
 $h3: 700 2.4rem/120% #{$font-family};
+$h4: 500 2.4rem/130% #{$font-family};
 $hfaq: 700 2.4rem/132% #{$font-family};
 $text-p: 400 1.6rem/120% #{$font-family};
 $txt-filter: 400 1.4rem/112% #{$font-family};
@@ -30,6 +31,7 @@ $text-p14: 400 1.4rem/120% #{$font-family};
 $text-p18: 400 1.8rem/140% #{$font-family};
 $btn-font-b: 600 1.4rem/120% #{$font-family};
 $card-flutuante-strong: 600 2.4rem/120% #{$font-family};
+$acervo-title: 700 2rem/120% #{$font-family};
 
 
 //MOBILE FONTS
