--- a/styles/scss/_clientes.scss
+++ b/styles/scss/_clientes.scss
@@ -2,6 +2,7 @@
     @include flex(column, center, center);
     background-color: white;
     height: 16rem;
+    overflow-x: hidden;
 
     .container{
 
