--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -285,7 +285,7 @@
     @include flex(column,flex-start,space-between);
     flex: 1;
     width: 100%;
-    max-width: 38.4rem;
+    gap: 2rem;
     height: 30rem;
     padding: 2.4rem;
     border-radius: 2rem;
@@ -377,7 +377,7 @@
     gap: 3.2rem;
     width: 100%;
     height: 28.8rem;
-    max-width: 38.4rem;
+    // max-width: 38.4rem;
 
     border: 1px solid rgba(0, 0, 0, 0.158);
     padding: 1.6rem;
