--- a/styles/scss/_empresa.scss
+++ b/styles/scss/_empresa.scss
@@ -6,16 +6,17 @@
     .container{
 
         .top-empresa{
-            @include flex(row, center, space-between);
+            @include flex(row, stretch, center);
+            gap: 6.4rem;
 
             .img-empresa {
                 width: 100%;
-                max-width: 56rem;
-                height: 56rem;
+                // max-width: 56rem;
+                // height: 56rem;
                 img {
                     width: 100%;
                     height: 100%;
-                    max-width: 56rem;
+                    // max-width: 56rem;
                     object-fit: cover;
                     display: block;
                 }
@@ -33,13 +34,16 @@
                     }
 
                     h2{
+                        br{
+                            display: inline;
+                        }
                         margin-bottom: 3.2rem;
                     }
                 }
 
                 .h4-txts-top{
                     display: grid;
-                    grid-template-columns: 1fr 1fr;
+                    grid-template-columns: repeat(auto-fit, minmax(27.2rem,1fr));
                     gap: 3.2rem;
 
                     .company{
@@ -58,5 +62,38 @@
                 @include flex(column,center,center);
             }
         }
+    }
+}
+
+@include responsive(1148px){
+    .container{
+        .top-empresa{
+
+            .top-empresa{
+
+
+                .text-empresa{
+
+                    .tt-top{
+
+                        h2{}
+                    }
+
+                    .h4-txts-top{
+                        display: grid;
+   
+                    }
+                }
+            }
+ 
+        }
+    }
+}
+
+@include responsive(880px){
+    .top-empresa{
+        display: flex;
+        flex-direction: column;
+    
     }
 }
