--- a/styles/scss/_solutions.scss
+++ b/styles/scss/_solutions.scss
@@ -26,7 +26,9 @@
 
         .cards-solutions{
 
-            @include flex(row, center, flex-start);
+            display: grid;
+            width: 100%;
+            grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
             gap: 3.2rem;
 
             .s-card{
@@ -36,12 +38,13 @@
                 background-color: white;
                 border-radius: 1.6rem;
                 width: 100%;
-                max-width: 38.4rem;
+                // max-width: 38.4rem;
                 height: 30rem;
                 padding: 1.6rem 2.4rem;
 
                 .top{
                     @include flex(row,center,space-between);
+                    width: 100%;
                 }
 
                 .content{
@@ -107,6 +110,13 @@
         .container {
             .cards-solutions {
               @include flex(column, center, center);
+
+              .s-card{
+                .top{
+                    @include flex(row,center,space-between);
+
+                }
+              }
             }
           }
 
