--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -1,7 +1,7 @@
 footer{
 
-    margin-top: 10rem;
-    margin-bottom: 5rem;
+    padding: 3.2rem;
+    // padding-bottom: 5rem;
 
     .container{
         border-bottom: 1px solid #999999;
@@ -32,7 +32,7 @@ footer{
                 flex-direction: column;
                 align-items: flex-start;
                 max-width: 100%;
-                gap: 2rem;
+                gap: 2.4rem;
             }
 
             ul{
@@ -124,3 +124,4 @@ footer{
     }
 
 };
+
