--- a/styles/scss/_cta.scss
+++ b/styles/scss/_cta.scss
@@ -1,3 +1,10 @@
+.s-cta{
+    .container{
+        margin-bottom: 10rem;
+    }
+
+}
+
 .card-cta{
     background-image: url(/assets/imgs/Background-cta.jpg);
     background-repeat: no-repeat;
