--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -7,7 +7,7 @@
     cursor: pointer;
     gap: 1.6rem;
     font: $btn-font-b;
-    color: white !important;
+    // color: white !important;
 
 
     img{
