section planos, falta tabela responsiva

--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -25,6 +25,7 @@ $h3: 700 2.4rem/120% #{$font-family};
 $h4: 500 2.4rem/130% #{$font-family};
 $hfaq: 700 2.4rem/132% #{$font-family};
 $text-p: 400 1.6rem/120% #{$font-family};
+$text-p-bold: 700 1.6rem/120% #{$font-family};
 $txt-filter: 400 1.4rem/112% #{$font-family};
 $pfaq: 400 1.6rem/150% #{$font-family};
 $text-p14: 400 1.4rem/120% #{$font-family};
