--- a/styles/scss/_acervo-conhecimento.scss
+++ b/styles/scss/_acervo-conhecimento.scss
@@ -6,7 +6,7 @@
     .container{
 
         .text-acervo{
-            @include flex(column,flex-start,center);
+            @include flex(column,center,center);
             gap: 3.2rem;
 
             h2{
@@ -14,6 +14,7 @@
             }
 
             p{
+                text-align: center;
                 color: #BEBEBE;
             }
         }
