--- a/styles/scss/_features.scss
+++ b/styles/scss/_features.scss
@@ -14,7 +14,7 @@
            grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
             gap: 3.2rem;
             width: 100%;
-            max-height: 55rem;
+            // max-height: 55rem;
             .card-plano{
                 @include flex(column, stretch,center);
                 gap: 2.4rem ;
@@ -86,6 +86,11 @@
                 }
             }
         }
+
+        .comparacao{
+            width: 100%;
+            overflow-x: auto;
+        }
     
         table{
     
@@ -147,6 +152,8 @@
             }
     
         }
+
+
     
     }
 
